[gd_scene load_steps=4 format=3 uid="uid://dax0hhxr4xyjj"]

[ext_resource type="Script" uid="uid://s6rq0ofyeie5" path="res://menu.gd" id="1_l6cm7"]
[ext_resource type="Theme" uid="uid://5wwgiimot5nw" path="res://theme/new_theme.tres" id="2_ekxnf"]
[ext_resource type="Script" uid="uid://d0ainskgkimnh" path="res://ui/button.gd" id="3_bqqt6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameTitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 30
text = "saebyn's pong game"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ekxnf")
text = "Start"
script = ExtResource("3_bqqt6")
tween_duration = 0.4
tween_scale = 1.165

[node name="KeybindingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Keybindings"
script = ExtResource("3_bqqt6")

[node name="MixerButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
script = ExtResource("3_bqqt6")

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credit"
script = ExtResource("3_bqqt6")

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ekxnf")
text = "Quit"
script = ExtResource("3_bqqt6")

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/KeybindingsButton" to="." method="_on_keybindings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MixerButton" to="." method="_on_mixer_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
